2002-08-18  Wakaba <w@suika.fam.cx>

	* MinName.pm: New module.

2002-07-22  Wakaba <w@suika.fam.cx>

	* Encode.pm (%_PerlName2IanaName): New hash.

2002-07-22  Wakaba <w@suika.fam.cx>

	* Encode.pm: New module.

2002-06-23  Wakaba <w@suika.fam.cx>

	* Jcode.pm: Remove name_minimumizers.  (Moved to
	Message::MIME::Charset.)
	* Jcode.pm: Give 'cte_7bit_preferred' property
	when make_charset of some charset.

2002-06-09  wakaba <w@suika.fam.cx>

	* Jcode.pm: Support 'name_minimumizer'.

2002-06-06  wakaba <w@suika.fam.cx>

	* Jcode.pm: 
	- Supports NKF.pm and Unicode::Japanese.pm.
	- (iso_2022_mime_charset_name): New function.
	- (euc_japan_mime_charset_name): Likewise.
	- (shift_jis_mime_charset_name): Likewise.
	- (x-euc-jisx0213-packed): New alias MIME name of EUC-JISX0213.

2002-06-01  wakaba <w@suika.fam.cx>

	* Jcode.pm: 
	- Returns minimum charset name.
	- Make-charset "junet" as an alias of ISO-2022-JP.

2002-05-30  wakaba <w@suika.fam.cx>

	* Jcode.pm: New module.