@@ -1,3 +1,8 @@
+2002-09-11  Wakaba <w@suika.fam.cx>
+
+	* Jcode.pm (jcode.pl): Convert fullwidth to halfwidth
+	when decode.
+
 2002-08-18  Wakaba <w@suika.fam.cx>
 
 	* MinName.pm: New module.
